# KonwenterBI-Optima

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_v2.1.md  CHANGELOG_v2.2.md  CHANGELOG_v2.3.md  CHANGELOG_v2.4.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_REPORT_v2.4.1.md  DEVELOPER_NOTES.md  GUI_FIX_REPORT.md  IMPLEMENTATION_REPORT_v2.2.md  Magaqzyn.xml  OPTIMIZATION_PLAN.md  PHASE1_REPORT.md  PHASE1_SUMMARY.md  PHASE2_REPORT.md  PHASE2_SUMMARY.md  QUICK_START.md  README.md  README_CONTRIBUTING.md  SETUP_FOR_GITHUB.md  Sprzedaż.xml  TEST_REPORT.md  USAGE_GUIDE.md  VALIDATION_FIX_REPORT.md  app_entry.py  app_entry.spec  benchmark_phase1.py  combined_reports.xml  pyproject.toml  raporty magazyny.xml  raporty sprzedaży.xml  raporty wzorcowe optima.xml  raporty zakupy.xml  report_01_combined.xml  report_02.xml  report_08.sql  report_10.xml  (+26 more)
.github/: PULL_REQUEST_TEMPLATE.md
SQL TEST/: combined_reports.xml  report_01.sql  report_02.sql  report_03.sql  report_04.sql  report_05.sql  report_06.sql  report_07.sql  report_08.sql  report_09.sql  report_10.sql  report_11.sql  report_12.sql  report_13.sql  report_14.sql  report_15.sql  report_16.sql  report_17.sql  report_18.sql  report_19.sql  report_20.sql  report_21.sql  report_22.sql  report_23.sql  report_24.sql  report_25.sql  report_26.sql  report_27.sql  report_28.sql  report_29.sql  report_30.sql  report_31.sql  report_32.sql  report_33.sql  report_34.sql  report_35.sql  report_36.sql
bi_converter/: __init__.py  __main__.py  config.json  converter.py  gui.py  logging_conf.py  recent_files_manager.py  (+4 more)
(+26 files in other folders)
